user registration and validation implemented
- added logout feature for taskbar
- if the user is still logged in from a previous session, they are taken to the main menu instead
- validation implemented in both login and registration menus
- implemented creation of new users

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,7 +21,7 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="16dp"
-        android:onClick="goToMainMenuActivity"
+        android:onClick="registerClick"
         android:text="@string/account_create"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
