--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -39,7 +39,7 @@
 
 
         <ImageView
-            android:id="@+id/settingsProfiveIcon"
+            android:id="@+id/settingsProfileIcon"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:padding="6dp"
