--- a/app/src/main/res/menu/layout_toolbar.xml
+++ b/app/src/main/res/menu/layout_toolbar.xml
@@ -20,8 +20,7 @@
     </item>
     <item
         android:id="@+id/action_logout"
-        android:title="@string/xml_logout">
-    </item>
+        android:title="@string/xml_logout"></item>
     <item
         android:id="@+id/settingsBtn"
         android:title="@string/xml_settings"></item>
